update pak suryo bu rissa

--- a/wedding/index-paksuryo.html
+++ b/wedding/index-paksuryo.html
@@ -154,7 +154,7 @@
 					<div class="col-xl-8 offset-xl-2">
 						<div data-animation-direction="fade" data-animation-delay="300">
 							<h2 class="title-fancy color">Assalamu'alaikum Wr. Wb.</h2>
-							<p class="center">Kepada Yth. Saudara/i <strong></strong> di tempat</p>
+							<p class="center">Kepada Yth. Saudara/i <strong>Bapak Suryo Adhi Wibowo, Ph.D.</strong> di tempat</p>
 							<p class="center">Tanpa mengurangi rasa hormat. Kami mengundang Bapak/Ibu/Saudara/i serta Kerabat sekalian untuk menghadiri acara pernikahan kami:</p>
 						</div>
 						
